... fixed the jump menu

--- a/resources/docco.css
+++ b/resources/docco.css
@@ -18,7 +18,7 @@ a:visited {
   color: #261a3b;
 }
 
-p, ul, li {
+p, ul, ol {
   margin: 15px 0;
 }
 
@@ -66,6 +66,7 @@ ul.sections > li > div {
 
 /*---------------------- Jump Page -----------------------------*/
 #jump_to, #jump_page {
+  margin: 0;
   background: white;
   -webkit-box-shadow: 0 0 25px #777; -moz-box-shadow: 0 0 25px #777;
   -webkit-border-bottom-left-radius: 5px; -moz-border-radius-bottomleft: 5px;
